# quant-research-platform

./: pyproject.toml
alembic/: env.py
alembic/versions/: 9270a83ebdaf_create_symbol_table.py
src/core/: config.py  enums.py  settings.py
src/data/: session.py
src/data/models/: symbol.py
src/database/: practice_connection.py  session.py
src/database/models/: __init__.py  symbol.py
