[project]
name = "quant-research-platform"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
